--- a/app/views/lists/_footer.html.erb
+++ b/app/views/lists/_footer.html.erb
@@ -1,7 +1,5 @@
 <div class="height100" uk-grid>
   <div class="uk-width-expand">
-    <div>
-    </div>
     <div class="uk-button-group uk-card uk-card-default uk-box-shadow-small">
       <button id="firstPageBtn" class="uk-button uk-button-default height40 back-white uk-visible@m padding0-15 "><span uk-icon="icon: chevron-double-left"></span></button>
       <button id="beforePageBtn" class="uk-button uk-button-default height40 back-white margin-right--1 uk-visible@m padding0-15 "><span uk-icon="icon: chevron-left"></span></button>
@@ -12,6 +10,6 @@
     </div>
   </div>
   <div class="uk-width-auto uk-margin-small-top">
-    <p>件数: <span id="totalCount"></span>件</p>
+    <p>件数: <span id="totalCount"></span>件 (<span id="firstCount"></span>-<span id="lastCount"></span>)</p>
   </div>
 </div>
